--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "packageManager": "npm@10.2.4",
   "scripts": {
     "dev": "tsx dev-server.ts",
-    "build": "npm run build --workspace=@plateful/shared && tsc",
+    "build": "tsc",
     "vercel-build": "echo 'Skipped - handled by root buildCommand'",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .vercel dist",
