--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "npm ci --workspaces --include-workspace-root",
-  "buildCommand": "npm run build --workspace=@plateful/shared && node build-api.js",
+  "buildCommand": "node build-api.js",
   "functions": {
     "api/**/*.ts": {
       "maxDuration": 30
