--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "installCommand": "npm ci --workspaces --include-workspace-root",
   "buildCommand": "node build-api.js",
   "functions": {
-    "api/**/*.ts": {
+    "api/*.ts": {
       "maxDuration": 30
     }
   }
