--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,9 +1,11 @@
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json",
-    "functions": {
-      "**/*.ts": {
-        "maxDuration": 30
-      }
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "functions": {
+    "api/api/*.ts": {
+      "maxDuration": 30
     }
-  }
-  
+  },
+  "installCommand": "npm install",
+  "buildCommand": "tsc",
+  "outputDirectory": "dist"
+}
