Update Vercel configuration to simplify function path and remove redundant commands
- Adjusted the function matching pattern to "api/*.ts" for improved clarity.
- Removed duplicate install and build command entries to streamline the configuration.

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,11 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "functions": {
-    "api/api/*.ts": {
-      "maxDuration": 30
-    }
-  },
   "installCommand": "npm install",
   "buildCommand": "tsc",
-  "outputDirectory": "dist"
+  "functions": {
+    "api/*.ts": {
+      "maxDuration": 30
+    }
+  }
 }
