--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,10 +1,11 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "npm install",
-  "buildCommand": "tsc",
   "functions": {
     "api/*.ts": {
       "maxDuration": 30
     }
-  }
+  },
+  "buildCommand": "",
+  "outputDirectory": ".",
+  "installCommand": "npm install"
 }
