Update Vercel configuration to disable Turbo and clear install command
- Removed the install command for a cleaner configuration.
- Disabled Turbo to streamline the build process.

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -5,7 +5,10 @@
       "maxDuration": 30
     }
   },
+  "installCommand": "",
   "buildCommand": "",
   "outputDirectory": ".",
-  "installCommand": "npm install"
+  "turbo": {
+    "enabled": false
+  }
 }
