--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,14 +1,8 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
     "api/*.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 256
     }
-  },
-  "installCommand": "",
-  "buildCommand": "",
-  "outputDirectory": ".",
-  "turbo": {
-    "enabled": false
   }
 }
